--- a/gb/19/11/5/n11635793.md
+++ b/gb/19/11/5/n11635793.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/byeujs321/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/byeujs321/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/byeujs321/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/byeujs321/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/byeujs321/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/byeujs321/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/byeujs321/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/byeujs321/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加国麦大中国学生会遭撤资格 上诉被驳回</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2010/01/100116221856985-600x400.jpg" />
 <h6>图为麦克马斯特大学。（余天祐／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年11月06日讯】（大纪元记者周行多伦多综合报导）<ahref="https://github.com/byeujs321/djy/blob/master/gb/tag/%E9%BA%A6%E5%85%8B%E9%A9%AC%E6%96%AF%E7%89%B9%E5%A4%A7%E5%AD%A6.md#1">麦克马斯特大学</a>（McMaster University，简称“麦大”）<ahref="https://github.com/byeujs321/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%AD%A6%E7%94%9F%E5%AD%A6%E8%80%85%E8%81%94%E8%B0%8A%E4%BC%9A.md#1">中国学生学者联谊会</a>（CSSA）因涉嫌协助中领馆监控校园活动，被<ahref="https://github.com/byeujs321/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88%E4%BF%B1%E4%B9%90%E9%83%A8%E8%B5%84%E6%A0%BC.md#1">取消俱乐部资格</a>。该联谊会提出的上诉也被驳回。</p>
-<p>据《南华早报》英文网站报导，<ahref="https://github.com/byeujs321/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%AD%A6%E7%94%9F%E5%AD%A6%E8%80%85%E8%81%94%E8%B0%8A%E4%BC%9A.md#1">中国学生学者联谊会</a>的法律代表认为，该校学生会总会取消该联谊会俱乐部资格的决定是基于“有偏见的假设”。</p>
+<p>【大纪元2019年11月06日讯】（大纪元记者周行多伦多综合报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%BA%A6%E5%85%8B%E9%A9%AC%E6%96%AF%E7%89%B9%E5%A4%A7%E5%AD%A6.md#1">麦克马斯特大学</a>（McMaster University，简称“麦大”）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%AD%A6%E7%94%9F%E5%AD%A6%E8%80%85%E8%81%94%E8%B0%8A%E4%BC%9A.md#1">中国学生学者联谊会</a>（CSSA）因涉嫌协助中领馆监控校园活动，被<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%96%E6%B6%88%E4%BF%B1%E4%B9%90%E9%83%A8%E8%B5%84%E6%A0%BC.md#1">取消俱乐部资格</a>。该联谊会提出的上诉也被驳回。</p>
+<p>据《南华早报》英文网站报导，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%AD%A6%E7%94%9F%E5%AD%A6%E8%80%85%E8%81%94%E8%B0%8A%E4%BC%9A.md#1">中国学生学者联谊会</a>的法律代表认为，该校学生会总会取消该联谊会俱乐部资格的决定是基于“有偏见的假设”。</p>
 <p>11月3日，学生会总会管理机构（student union government）拒绝了中国学生学者联谊会要求恢复其俱乐部资格的上诉，并通过了一项动议，反对中共政府或中国学生学者联谊会试图“直接或间接干预校园政治活动”。</p>
 <p>这次上诉失败后，麦大中国学生学者联谊会将在一年内不能拥有该校学生俱乐部资格，不能享受俱乐部成员组织拥有的特权，例如预订房间和获得学生会总会资助。</p>
 <p>《南华早报》的报导称，中国学生学者联谊会拒绝接受针对此事的采访，其法律代表也没对此结果做出回应。发生在麦大的这次事件，使人们再次关注中国学生学者联谊会在世界各地高等院校的活动，以及中共在国际上推进其专制影响力的努力。</p>
@@ -32,48 +32,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/3/9/10/n373334.md#1">北卡大学中国学生学者联谊会迎新生聚餐晚会</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/8/4/24/n2093338.md#1">杜克学生团体推动调查该校中国学生学者联谊会</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/17/9/18/n9643491.md#1">麦克马斯特大学宣布 2018年校园全面禁烟</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/19/8/26/n11477086.md#1">麦克马斯特大学喜迎4千住校新生</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12341606.md#1">中企温哥华建货仓 被指为一带一路入加国铺路</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12341352.md#1">多数加拿大父母计划送孩子回校</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12340898.md#1">学者：港版国安法危及所有加拿大人</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12340905.md#1">中共禁运加国的疫苗 靠加国研究成果制成</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340930.md#1">医生：孩子们应重返校园 家长不用担心</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340809.md#1">副总理方慧兰宣誓就任新财政部长</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/3/9/10/n373334.md#1">北卡大学中国学生学者联谊会迎新生聚餐晚会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/4/24/n2093338.md#1">杜克学生团体推动调查该校中国学生学者联谊会</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/9/18/n9643491.md#1">麦克马斯特大学宣布 2018年校园全面禁烟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/8/26/n11477086.md#1">麦克马斯特大学喜迎4千住校新生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687158.md#1">卑诗省政府大量删除“过时”性别用语</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687147.md#1">加拿大经济一月份小幅增长0.2%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687086.md#1">渥京考虑对SUV和皮卡车额外征税</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687035.md#1">联邦审查Flair 加国廉航或失经营执照</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13684629.md#1">保守党：特鲁多2030年减排目标不现实</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684344.md#1">加拿大一元店今年将推出5元定价</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/byeujs321/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/10/16/n3402449.md#1" target="_blank">辛灏年演讲片段: 驱除马列文化 还我民族之魂</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/9/n10899641.md#1" target="_blank">抗日战争期间中共做了啥？八年抗战期间中共作为大事纪要</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/6/n12311908.md#1">僧人神游极乐世界 带回醒世奇闻</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/6/7/n12168858.md#1">“势败休云贵  家亡莫论亲”  板儿递给巧姐的那个佛手</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/8/n12316046.md#1">中国古代独步天下的天文科技成就</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335448.md#1">神秘的中国绝代王后（上）</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/14/n12329430.md#1">疗愈人心的天堂歌声——创作歌手凯蒂?曼蒂克</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12342655.md#1">【纪元播报】中共北戴河会议难达共识 争论不休</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340737.md#1">【时事纵横】习吁节粮背后 川普：早不与习通话</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/19/n12341322.md#1">【十字路口】中共七大黑帮特色 高官坠亡藏内幕</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336258.md#1">【翻墙必看】中共北戴河会议的异音曝光</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336450.md#1">瑞士驻华大使馆发微博 网民留言“大翻车”</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12337826.md#1">好市多“Tiffany”钻戒之争 蒂芙尼败诉</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12340885.md#1">成龙曾自曝做假慈善 不惭言论惊呆网友</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335475.md#1">李若彤首度公布真实年龄 冻龄外表震惊粉丝</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338375.md#1">孙俪爆料邓超糗事 做了一天笔记最终空无一字</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338032.md#1">港星住不惯大陆隔离酒店 一句话惹小粉红围剿</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335889.md#1">分享十岁女儿扎染技能 吴尊全家穿亲子装逛街</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/16/n12335214.md#1">为护小主人 美国牧羊犬与歹徒搏斗身中三枪</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336793.md#1">奇迹！挪威公司新技术 沙漠变良田仅需7小时</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12338146.md#1">走路也能护膝盖 医师：对膝盖有益的健走方法</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/17/n12336694.md#1">英国一群绵羊似被“点穴” 静止几个小时</a></li>
-<li><a href="https://github.com/byeujs321/djy/blob/master/gb/20/8/18/n12339362.md#1">大陆老翁遛狗 被从天而降的小猫砸昏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/byeujs321/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/byeujs321/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/5/n11635793.htm">加国麦大中国学生会遭撤资格 上诉被驳回</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/11/5/n11635793.htm">加国麦大中国学生会遭撤资格 上诉被驳回</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/byeujs321/djy/blob/master/gb/19/11/5/n11635793.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/byeujs321/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/byeujs321/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/byeujs321/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/byeujs321/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/byeujs321/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/11/5/n11635793.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
